fix white space

--- a/src/views/diaryItems/DiaryItems.scss
+++ b/src/views/diaryItems/DiaryItems.scss
@@ -7,7 +7,7 @@
   width: 100%;
   overflow-y: auto;
   height: calc(100vh - 200px);
-  &:not(:last-child){
+  >:last-child {
     margin-bottom: 50px;
   }
 }
